[project]
name = "pubmed_tool"
version = "0.1.0"
description = "CLI tool to fetch and filter PubMed papers by company affiliation"
authors = [
    {name = "Bhuvana Chandrika", email = "mukkollabhuvanachandrika@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "requests (>=2.32.4,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [{ include = "pubmed_tool" }]

[tool.poetry.scripts]
get-papers-list = "pubmed_tool.cli:app"
